compiler/lume_parser/src/snapshots/lume_parser__tests__type_alias_snapshots@scalar.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"type A = B\")"
---
[
    TypeDefinition(
        Alias(
            AliasDefinition {
                name: Identifier {
                    name: "A",
                    location: Location(
                        5..6,
                    ),
                },
                definition: Named(
                    NamedType {
                        name: Path {
                            root: [],
                            name: PathSegment {
                                name: Identifier {
                                    name: "B",
                                    location: Location(
                                        9..10,
                                    ),
                                },
                                type_arguments: [],
                                location: Location(
                                    9..10,
                                ),
                            },
                            location: Location(
                                9..10,
                            ),
                        },
                    },
                ),
                location: Location(
                    0..10,
                ),
                documentation: None,
            },
        ),
    ),
]
