compiler/lume_parser/src/snapshots/lume_parser__tests__use_trait_snapshots@generic.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(Target :: Item,\n\"\n        use Add<Int32>: Int32 {\n            fn add(other: Int32) -> Int32 {\n                return self + other;\n            }\n        }\")"
---
SOURCE_FILE@0..137
  WHITESPACE@0..9 "\n        "
  TRAIT_IMPL@9..137
    USE_KW@9..12 "use"
    WHITESPACE@12..13 " "
    NAMED_TYPE@13..23
      PATH@13..23
        PATH_TYPE@13..23
          NAME@13..16
            IDENT@13..16 "Add"
          GENERIC_ARGS@16..23
            LESS@16..17 "<"
            NAMED_TYPE@17..22
              PATH@17..22
                PATH_TYPE@17..22
                  NAME@17..22
                    IDENT@17..22 "Int32"
            GREATER@22..23 ">"
    COLON@23..24 ":"
    WHITESPACE@24..25 " "
    NAMED_TYPE@25..31
      PATH@25..31
        PATH_TYPE@25..31
          NAME@25..30
            IDENT@25..30 "Int32"
          WHITESPACE@30..31 " "
    LEFT_BRACE@31..32 "{"
    WHITESPACE@32..45 "\n            "
    METHOD@45..127
      SIG@45..75
        FN_KW@45..47 "fn"
        WHITESPACE@47..48 " "
        NAME@48..51
          IDENT@48..51 "add"
        PARAM_LIST@51..65
          LEFT_PAREN@51..52 "("
          PARAM@52..64
            NAME@52..57
              IDENT@52..57 "other"
            COLON@57..58 ":"
            WHITESPACE@58..59 " "
            NAMED_TYPE@59..64
              PATH@59..64
                PATH_TYPE@59..64
                  NAME@59..64
                    IDENT@59..64 "Int32"
          RIGHT_PAREN@64..65 ")"
        WHITESPACE@65..66 " "
        RETURN_TYPE@66..75
          ARROW@66..68 "->"
          WHITESPACE@68..69 " "
          NAMED_TYPE@69..75
            PATH@69..75
              PATH_TYPE@69..75
                NAME@69..74
                  IDENT@69..74 "Int32"
                WHITESPACE@74..75 " "
      BLOCK@75..127
        LEFT_BRACE@75..76 "{"
        WHITESPACE@76..93 "\n                "
        RETURN_STMT@93..113
          RETURN_KW@93..99 "return"
          WHITESPACE@99..100 " "
          BIN_EXPR@100..112
            VARIABLE_EXPR@100..104
              NAME@100..104
                IDENT@100..104 "self"
            WHITESPACE@104..105 " "
            ADD@105..106 "+"
            WHITESPACE@106..107 " "
            VARIABLE_EXPR@107..112
              NAME@107..112
                IDENT@107..112 "other"
          SEMICOLON@112..113 ";"
        WHITESPACE@113..126 "\n            "
        RIGHT_BRACE@126..127 "}"
    WHITESPACE@127..136 "\n        "
    RIGHT_BRACE@136..137 "}"
