compiler/lume_parser/src/snapshots/lume_parser__tests__use_trait_snapshots@generic_type.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item,\n\"\n        use Enumerable<T>: Vector<T> {\n            fn next() -> T { }\n        }\")"
---
SOURCE_FILE@0..80
  WHITESPACE@0..9 "\n        "
  TRAIT_IMPL@9..80
    USE_KW@9..12 "use"
    WHITESPACE@12..13 " "
    NAMED_TYPE@13..26
      PATH@13..26
        PATH_TYPE@13..26
          NAME@13..23
            IDENT@13..23 "Enumerable"
          GENERIC_ARGS@23..26
            LESS@23..24 "<"
            NAMED_TYPE@24..25
              PATH@24..25
                PATH_TYPE@24..25
                  NAME@24..25
                    IDENT@24..25 "T"
            GREATER@25..26 ">"
    COLON@26..27 ":"
    WHITESPACE@27..28 " "
    NAMED_TYPE@28..38
      PATH@28..38
        PATH_TYPE@28..37
          NAME@28..34
            IDENT@28..34 "Vector"
          GENERIC_ARGS@34..37
            LESS@34..35 "<"
            NAMED_TYPE@35..36
              PATH@35..36
                PATH_TYPE@35..36
                  NAME@35..36
                    IDENT@35..36 "T"
            GREATER@36..37 ">"
        WHITESPACE@37..38 " "
    LEFT_BRACE@38..39 "{"
    WHITESPACE@39..52 "\n            "
    METHOD@52..70
      SIG@52..67
        FN_KW@52..54 "fn"
        WHITESPACE@54..55 " "
        NAME@55..59
          IDENT@55..59 "next"
        PARAM_LIST@59..61
          LEFT_PAREN@59..60 "("
          RIGHT_PAREN@60..61 ")"
        WHITESPACE@61..62 " "
        RETURN_TYPE@62..67
          ARROW@62..64 "->"
          WHITESPACE@64..65 " "
          NAMED_TYPE@65..67
            PATH@65..67
              PATH_TYPE@65..67
                NAME@65..66
                  IDENT@65..66 "T"
                WHITESPACE@66..67 " "
      BLOCK@67..70
        LEFT_BRACE@67..68 "{"
        WHITESPACE@68..69 " "
        RIGHT_BRACE@69..70 "}"
    WHITESPACE@70..79 "\n        "
    RIGHT_BRACE@79..80 "}"
