compiler/lume_parser/src/snapshots/lume_parser__tests__use_trait_snapshots@priv_method.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"\n        use Add in Int32 {\n            fn add(other: Int32) -> Int32 {\n                return self + other;\n            }\n        }\")"
---
[
    Use(
        UseTrait {
            visibility: Private(
                Private {
                    location: Location(
                        9..12,
                    ),
                },
            ),
            name: Named(
                NamedType {
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Add",
                                location: Location(
                                    13..16,
                                ),
                            },
                            type_arguments: [],
                            location: Location(
                                13..19,
                            ),
                        },
                        location: Location(
                            13..19,
                        ),
                    },
                },
            ),
            target: Named(
                NamedType {
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Int32",
                                location: Location(
                                    20..25,
                                ),
                            },
                            type_arguments: [],
                            location: Location(
                                20..27,
                            ),
                        },
                        location: Location(
                            20..27,
                        ),
                    },
                },
            ),
            methods: [
                TraitMethodImplementation {
                    visibility: Private(
                        Private {
                            location: Location(
                                40..42,
                            ),
                        },
                    ),
                    name: Identifier {
                        name: "add",
                        location: Location(
                            43..46,
                        ),
                    },
                    parameters: [
                        Parameter {
                            name: Identifier {
                                name: "other",
                                location: Location(
                                    47..52,
                                ),
                            },
                            param_type: Named(
                                NamedType {
                                    name: Path {
                                        root: [],
                                        name: Type {
                                            name: Identifier {
                                                name: "Int32",
                                                location: Location(
                                                    54..59,
                                                ),
                                            },
                                            type_arguments: [],
                                            location: Location(
                                                54..60,
                                            ),
                                        },
                                        location: Location(
                                            54..60,
                                        ),
                                    },
                                },
                            ),
                            vararg: false,
                            location: Location(
                                47..60,
                            ),
                        },
                    ],
                    type_parameters: [],
                    return_type: Some(
                        Named(
                            NamedType {
                                name: Path {
                                    root: [],
                                    name: Type {
                                        name: Identifier {
                                            name: "Int32",
                                            location: Location(
                                                64..69,
                                            ),
                                        },
                                        type_arguments: [],
                                        location: Location(
                                            64..71,
                                        ),
                                    },
                                    location: Location(
                                        64..71,
                                    ),
                                },
                            },
                        ),
                    ),
                    block: Block {
                        statements: [
                            Return(
                                Return {
                                    value: Some(
                                        IntrinsicCall(
                                            IntrinsicCall {
                                                callee: Variable(
                                                    Variable {
                                                        name: Identifier {
                                                            name: "self",
                                                            location: Location(
                                                                95..99,
                                                            ),
                                                        },
                                                    },
                                                ),
                                                name: Path {
                                                    root: [],
                                                    name: Callable {
                                                        name: Identifier {
                                                            name: "+",
                                                            location: Location(
                                                                100..101,
                                                            ),
                                                        },
                                                        type_arguments: [],
                                                        location: Location(
                                                            100..101,
                                                        ),
                                                    },
                                                    location: Location(
                                                        100..101,
                                                    ),
                                                },
                                                arguments: [
                                                    Variable(
                                                        Variable {
                                                            name: Identifier {
                                                                name: "other",
                                                                location: Location(
                                                                    102..107,
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                ],
                                                location: Location(
                                                    95..107,
                                                ),
                                            },
                                        ),
                                    ),
                                    location: Location(
                                        88..108,
                                    ),
                                },
                            ),
                        ],
                        location: Location(
                            70..122,
                        ),
                    },
                    location: Location(
                        40..122,
                    ),
                },
            ],
            type_parameters: [],
            location: Location(
                9..132,
            ),
        },
    ),
]
