compiler/lume_parser/src/snapshots/lume_parser__tests__use_trait_snapshots@pub_method.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"\n        use Add in Int32 {\n            pub fn add(other: Int32) -> Int32 {\n                return self + other;\n            }\n        }\")"
---
[
    Use(
        UseTrait {
            visibility: Private(
                Private {
                    location: Location(
                        9..12,
                    ),
                },
            ),
            name: Named(
                NamedType {
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Add",
                                location: Location(
                                    13..16,
                                ),
                            },
                            type_arguments: [],
                            location: Location(
                                13..16,
                            ),
                        },
                        location: Location(
                            13..16,
                        ),
                    },
                },
            ),
            target: Named(
                NamedType {
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Int32",
                                location: Location(
                                    20..25,
                                ),
                            },
                            type_arguments: [],
                            location: Location(
                                20..25,
                            ),
                        },
                        location: Location(
                            20..25,
                        ),
                    },
                },
            ),
            methods: [
                TraitMethodImplementation {
                    visibility: Public(
                        Public {
                            location: Location(
                                40..43,
                            ),
                        },
                    ),
                    name: Identifier {
                        name: "add",
                        location: Location(
                            47..50,
                        ),
                    },
                    parameters: [
                        Parameter {
                            name: Identifier {
                                name: "other",
                                location: Location(
                                    51..56,
                                ),
                            },
                            param_type: Named(
                                NamedType {
                                    name: Path {
                                        root: [],
                                        name: Type {
                                            name: Identifier {
                                                name: "Int32",
                                                location: Location(
                                                    58..63,
                                                ),
                                            },
                                            type_arguments: [],
                                            location: Location(
                                                58..63,
                                            ),
                                        },
                                        location: Location(
                                            58..63,
                                        ),
                                    },
                                },
                            ),
                            vararg: false,
                            location: Location(
                                51..63,
                            ),
                        },
                    ],
                    type_parameters: [],
                    return_type: Some(
                        Named(
                            NamedType {
                                name: Path {
                                    root: [],
                                    name: Type {
                                        name: Identifier {
                                            name: "Int32",
                                            location: Location(
                                                68..73,
                                            ),
                                        },
                                        type_arguments: [],
                                        location: Location(
                                            68..73,
                                        ),
                                    },
                                    location: Location(
                                        68..73,
                                    ),
                                },
                            },
                        ),
                    ),
                    block: Block {
                        statements: [
                            Return(
                                Return {
                                    value: Some(
                                        IntrinsicCall(
                                            IntrinsicCall {
                                                callee: Variable(
                                                    Variable {
                                                        name: Identifier {
                                                            name: "self",
                                                            location: Location(
                                                                99..103,
                                                            ),
                                                        },
                                                    },
                                                ),
                                                name: Path {
                                                    root: [],
                                                    name: Callable {
                                                        name: Identifier {
                                                            name: "+",
                                                            location: Location(
                                                                104..105,
                                                            ),
                                                        },
                                                        type_arguments: [],
                                                        location: Location(
                                                            104..105,
                                                        ),
                                                    },
                                                    location: Location(
                                                        104..105,
                                                    ),
                                                },
                                                arguments: [
                                                    Variable(
                                                        Variable {
                                                            name: Identifier {
                                                                name: "other",
                                                                location: Location(
                                                                    106..111,
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                ],
                                                location: Location(
                                                    99..111,
                                                ),
                                            },
                                        ),
                                    ),
                                    location: Location(
                                        92..112,
                                    ),
                                },
                            ),
                        ],
                        location: Location(
                            74..126,
                        ),
                    },
                    location: Location(
                        40..126,
                    ),
                },
            ],
            type_parameters: [],
            location: Location(
                9..136,
            ),
        },
    ),
]
