compiler/lume_parser/src/snapshots/lume_parser__tests__visibility_snapshots@internal.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"pub(internal) fn foo() {}\")"
---
SOURCE_FILE@0..25
  FN@0..25
    VISIBILITY@0..13
      PUB_KW@0..3 "pub"
      LEFT_PAREN@3..4 "("
      INTERNAL_KW@4..12 "internal"
      RIGHT_PAREN@12..13 ")"
    WHITESPACE@13..14 " "
    SIG@14..22
      FN_KW@14..16 "fn"
      WHITESPACE@16..17 " "
      NAME@17..20
        IDENT@17..20 "foo"
      PARAM_LIST@20..22
        LEFT_PAREN@20..21 "("
        RIGHT_PAREN@21..22 ")"
    WHITESPACE@22..23 " "
    BLOCK@23..25
      LEFT_BRACE@23..24 "{"
      RIGHT_BRACE@24..25 "}"
